Bug 352421 - Stereotype not removed from class instance
Summary: Stereotype not removed from class instance
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.17.0 (KDE Applications 15.08.0)
Platform: Other Other
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-08 04:15 UTC by Ralf Habacker
Modified: 2015-12-16 18:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.17.1 (KDE Applications 15.08.1)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2015-09-08 04:15:09 UTC
In class properties dialog there is combo box for selecting a stereotype. The widget includes a 'x' to clear the displayed value, which has no effect on the related class instance on pressing "Apply" otr "Ok".

Reproducible: Always

Steps to Reproduce:
1. start umbrello
2. add a class
3. open class properties dialog and select a stereotype
4. press apply
5. press the 'x' in the stereotype widget to clear the displayed stereotype
6. press apply

Actual Results:  
The stereotype is not removed from the class instance


Expected Results:  
The stereotype should be removed from the class instance.
Comment 1 Ralf Habacker 2015-09-08 04:27:16 UTC
Git commit c049e87d67373410d9b861f16385af60c240c3a4 by Ralf Habacker.
Committed on 08/09/2015 at 04:26.
Pushed by habacker into branch 'Applications/15.08'.

Fix 'Stereotype not removed from class instance'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)

M  +6    -4    umbrello/dialogs/widgets/umlstereotypewidget.cpp

http://commits.kde.org/umbrello/c049e87d67373410d9b861f16385af60c240c3a4
Comment 2 Ralf Habacker 2015-12-16 18:48:09 UTC
Git commit 0e7edb0318990ea4f4d97378e22457ad0199a538 by Ralf Habacker.
Committed on 16/12/2015 at 18:15.
Pushed by habacker into branch 'frameworks'.

Fix 'Stereotype not removed from class instance'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)

M  +6    -4    umbrello/dialogs/widgets/umlstereotypewidget.cpp

http://commits.kde.org/umbrello/0e7edb0318990ea4f4d97378e22457ad0199a538