Fix 'Stereotype not removed from class instance'.

FIXED-IN:2.17.1 (KDE Applications 15.08.1)
BUG:352421